test/files/neg/t2796.check
t2796.scala:9: error: early initializers are no longer supported; use trait parameters instead
trait T1 extends {
                 ^
t2796.scala:11: error: ';' expected but 'with' found.
} with Base
  ^
t2796.scala:13: error: early initializers are no longer supported; use trait parameters instead
trait T2 extends {
                 ^
t2796.scala:15: error: ';' expected but 'with' found.
} with Base
  ^
t2796.scala:17: error: early initializers are no longer supported; use trait parameters instead
class C1 extends {
                 ^
t2796.scala:19: error: ';' expected but 'with' found.
} with Base
  ^
6 errors found
